implemented barbones nav portion

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
     <head>
         <link rel="stylesheet" href="style.css">
     </head>
+    <header>
+        <div id="nav">
+            <nav id="nav_left">
+                <a href="">About</a>
+                <a href="">Store</a>
+            </nav>
+            <nav id="nav_right">
+                <a href="">Gmail</a>
+                <a href="">Images</a>
+                <a href="">Google Apps</a>
+                <a href="">User Profile Picture</a>
+            </nav>
+        </div>
+
+    </header>
 
     <body>
-        
+        <h1>
+            Hello world!
+        </h1>
+        <form>
+
+        </form>
     </body>
 
     <footer>
