--- a/index.html
+++ b/index.html
@@ -16,16 +16,12 @@
                 <a href="">User Profile Picture</a>
             </nav>
         </div>
-
     </header>
 
     <body>
-        <h1>
-            Hello world!
-        </h1>
-        <form>
-
-        </form>
+        <div id="logo">
+            <img src="https://tinyurl.com/qhj7asq" alt="">
+        </div>
     </body>
 
     <footer>
