added search bar and two submit buttons

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
                 <a href="">Gmail</a>
                 <a href="">Images</a>
                 <a href="">Google Apps</a>
-                <a href="">User Profile Picture</a>
+                <img src="" alt="prof.pic">
             </nav>
+
         </div>
     </header>
 
@@ -22,6 +23,14 @@
         <div id="logo">
             <img src="https://tinyurl.com/qhj7asq" alt="">
         </div>
+        <div id="search_bar" >
+            <input type="text" >
+        </div>
+        <div id="buttons">
+            <button type="submit">Google Search</button>
+            <button type="submit">I'm Feeling Lucky</button>
+        </div>
+        
     </body>
 
     <footer>
