--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
     </body>
 
     <footer>
+        <div class="footer">
+            <div id="footer_left">
+                <a href="">Advertising</a>
+                <a href="">Business</a>
+                <a href="">How Search Works</a>
+            </div>
+            <div id="footer_right">
+                <a href="">Privacy</a>
+                <a href="">Terms</a>
+                <a href="">Settings</a>
+            </div>
 
+        </div>
     </footer>
 </html>
